#10207 Refactor Layers providers parallel invocation